--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -14,14 +14,396 @@
     max-height: 30px;
 }
 
+
 .serch__icon {
     margin-left: 77px;
     padding:32px 0 32px 0;
     max-width: 16px;
     max-height: 16px;
+    clear: right;
 }
 
 .serch__text {
-    margin-left: 15px;
-    padding: 28px 0 30px 0px;
+     padding: 28px 0 30px 0px; 
+    left:326px;
+    top:20px;
+    position: absolute;
+   
 }
+
+/* .serch__function {
+    display: flex;
+    gap:15px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+} */
+
+.notification__icon {
+    margin-left: 924px;
+    padding: 30px 0 30px 0;
+}
+
+
+
+.profile__image{
+    padding:18px 0 18px 0;
+    margin-left: 53px;
+}
+.johndoe__text {
+    position: absolute;
+    top: 24px;
+left: 1390px;
+padding: 28px 0 30px 0px; 
+}
+
+.downword__arrow {
+    position: absolute;
+    top:15px;
+    left:1460px;
+    padding: 37px 0 37px 0;
+
+
+}
+
+/* .main__section {
+    display: flex;
+    flex-direction: row;
+
+} */
+.dashboard__icon{
+    width: 15px;
+    height: 15px;
+}
+
+aside {
+    width: 242px;
+height: 1279px;
+float: left;
+background: #FFFFFF 0% 0% no-repeat padding-box;
+display: flex;
+flex-direction: column;
+}
+
+.red__box {
+    width: 183px;
+height: 43px;
+margin-left: 30px;
+margin-top: 25px;
+     background: #FFF3F4 0% 0% no-repeat padding-box;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+}
+
+.dashboard__icon {
+     padding:14px 0 14px 17px;
+    /* float: left;
+    clear: both; */ 
+}
+
+.dashboard__text {
+    font: normal normal normal 16px/21px Roboto;
+    color: #C8242F;
+     padding: 10px 0 12px 0;
+    
+}
+
+.box{
+   
+    border-radius: 5px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
+margin-top: 30px;
+gap: 12px;
+
+}
+.aside__icon {
+    width: 18px;
+    height: 18px;
+    padding:0px 0 0px 17px;
+
+
+}
+
+.dashboard__section {
+    width: 1318px;
+    height: 1279px;
+    background: #fafafa 0% 0% no-repeat padding-box;
+    margin-top: 15px;
+    margin-left: 242px;
+}
+
+.rightside__dashboard__text {
+ padding: 20px 0 0 48px;
+ text-align: left;
+ font-size: 39px;
+ font-family: Roboto;
+ font-weight: 500;
+ 
+}
+/* 
+.active__boxes{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    
+
+}
+.box-1 {
+    width: 219px;
+    height: 116px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 5px;
+    margin-top: 22px;
+    margin-left: 48px;
+    margin-right: 30px;
+    display: flex;
+    float:left;
+    
+   
+}
+
+.newproduct__logo {
+    width: 33px;
+    height: 33px;
+    padding: 41px 0px 41px 38px;
+    
+}
+
+.newproduct__text {
+    padding:10px 0 0 0;
+    margin-left: 10px;
+    font-family: Roboto;
+    text-align: left;
+    font-size: 25px;
+    letter-spacing: 0;
+    
+}
+
+.box-2 {
+    width: 219px;
+    height: 116px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 5px;
+    top: 200px;
+    display: flex;
+    margin-left: 15px;
+    float: left;
+
+    
+
+} */
+
+.active__boxes {
+    margin-top: 30px;
+    display: flex;
+    border-radius: 5px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    gap:15px;
+}
+
+.box-1 {
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 5px;
+    width: 229px;
+    height: 126px;
+    margin-left: 15px;
+   display: flex;
+   flex-direction: row;
+    float: left;
+    clear: right;
+
+}
+
+.box-2 {
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 5px;
+    width: 235px;
+    height: 126px;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.newproduct__logo {
+    width:33px;
+    height: 33px;
+    padding:41px 0px 41px 38px; 
+}
+.newproduct__text {
+    padding:20px 0 0 0;
+    margin-left: 10px;
+    font-family: Roboto;
+    font-size: 23px;
+    text-align: left;
+    
+}
+.graph__section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    
+}
+
+.timeseries {
+    margin-left:530px;
+    font: normal normal normal 12px/16px Roboto;
+    color: #ADADAD;
+}
+.datagraph__section {
+    
+    padding-top: 10px;
+    width: 802px;
+    height: 400px;
+    margin: 30px;
+    border-radius: 5px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    clear: right;
+}
+
+.sale__text{
+    text-align: left;
+    font-size: 25px;
+   padding: 23px 0px 0 29px ;
+    font-weight: 500;
+    font-family: Roboto;
+    margin-top: 20px;
+    margin-top: 15px;
+}
+
+
+.data__graph{
+    padding-left: 29px;
+}
+
+.bargraph__section{
+    width: 385px;
+    height: 398px;
+    border-radius: 5px;
+    padding-top: 10px;
+    margin-top: 30px;;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+}
+
+.salesbycountry__text {
+
+    text-align: left;
+    font-size: 25px;
+    padding: 21px 0px 0 29px ;
+    font-weight: 500;
+    font-family: Roboto;
+   
+    }
+.pie__chart {  
+    padding: 15px 0 0 89px;;
+
+    }
+
+.piechart__dotts {
+    width: 30px;
+    height: 30px;
+}
+
+.country__text{
+    text-align: left;
+font: normal normal normal 15px/20px Roboto;
+color: #3E3E3E;
+}
+
+.orange__dot {
+    top: 674px;
+left: 1173px;
+width: 30px;
+height: 30px;
+}
+
+.yellow__dot{
+    top: 674px;
+left: 1392px;
+width: 30px;
+height: 30px;
+}
+
+.green__dot {
+    top: 636px;
+left: 1392px;
+margin-left:30px;
+width: 30px;
+height: 30px;
+
+}
+
+.red__dot{
+    top: 636px;
+left: 1173px;
+width: 30px;
+height: 30px;
+}
+
+
+.invoice__section {
+
+width: 1185px;
+height: 558px;
+margin-left: 30px;
+background: #FFFFFF 0% 0% no-repeat padding-box;
+border-radius: 5px;
+opacity: 1;
+padding: 20px 0 0 29px;;
+}
+
+.Invoices__text {
+    text-align: left;
+    font-size: 25px;
+    padding: 21px 0px 0px 29px ;
+    font-weight: 500;
+    font-family: Roboto;
+   
+    
+
+}
+
+.viewall__text{
+    margin-left:1034px;
+    color: #C8242F;
+}
+
+.invoice__table {
+    padding:10px;
+}
+
+
+
+.th{color: #ADADAD;}
+
+th,td{
+    padding: 13.15px;
+    text-align: left;
+    font: normal normal normal 15px/20px Roboto;
+    color: #3E3E3E;
+}
+
+ table,th,td{
+    border-bottom: solid 1px #E9E9E9;
+} 
+
+#paid{
+    color: #3cdd5f;
+}
+#pending{
+    color: #bababa;
+}
+#failed{
+    color: #ff4545;
+}
+/* #green__button {
+    width:50px;
+    height: 26px;
+    background: #EBFFEF 0% 0% no-repeat padding-box;
+    text-align: center;
+    border: none;
+} */
