--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,54 @@ input:hover {
   color: #c8242f;
   text-decoration: none;
 }
+
+
+@media (max-width: 360px) {
+  .main__container{
+    display: flex;
+    flex-direction: row;
+    background: #fafafa 0% 0% no-repeat padding-box
+    
+  }
+  .image__container {
+    margin:10px 0 10px 30px;
+  }
+
+  .right__container{
+    padding: 20px;
+    margin-left:60px ;
+   
+  }
+/* 
+  .main__text {
+    color: #3e3e3e;
+    font: normal normal 400 50px/51px Roboto;
+    margin: 20px 90px 0 0;
+  }
+   */
+
+  ::placeholder {
+    padding: 15px 0px 15px 15px;
+    font: normal normal normal 24px/25px Roboto;
+  }
+
+  .forgot__text {
+    margin: 43px 0 0 145px;
+    font: normal normal normal 20px/21px Roboto;
+  }
+
+  .new__member__text {
+    font: normal normal normal 20px/21px Roboto;
+  }
+
+  .register_text {
+    font: normal normal normal 20px/21px Roboto;
+  }
+}
+
+
+@media (min-width: 1580px) {
+  .login__page {
+    margin-left: 140px; 
+  }
+}
