--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -407,3 +407,163 @@ th,td{
     text-align: center;
     border: none;
 } */
+
+
+@media(max-width:479px){
+    .johndoe__text {
+        display: none;
+    } 
+    .navbar {
+        height: 100px;
+    }
+   /* aside {
+    display: none;
+    } */
+    .downword__arrow{
+        left:1480px;
+    }
+   .menu__bar{
+       padding: 34px 0 34px 29px;
+       width: 35px;
+       height: 35px;
+       
+      
+   }
+   .serch__text{
+       display: none;
+   }
+   .logo {
+    padding:15px 0 15px 0;
+    max-height: 40px;
+}
+
+.serch__icon {
+    
+    padding:10px 0 10px 0;
+    max-width: 30px;
+    max-height: 30px;
+ 
+}
+
+.profile__image{
+    width: 55px;
+    height: 55px;
+}
+
+
+.dashboard__text{
+    display: none;
+}
+.Analysis__text{
+    display: none;
+}
+
+.inbox__text {
+    display: none;
+}
+.clock__text {
+    display: none;
+}
+.users__text{
+    display: none;
+}
+.maintenance__text {
+    display: none;
+}
+.setting__text{
+    display: none;
+}
+.red__box {
+    width: 60px;
+}
+
+aside {
+    width: 100px;
+}
+.dashboard__section {
+   
+    margin-left: 105px;
+    
+
+    width: 1318px;
+    height: 2200px;
+    background: #fafafa 0% 0% no-repeat padding-box;
+    margin-top: 15px;
+   
+
+
+}
+.active__boxes{
+    flex-wrap: wrap;
+    justify-content: center;
+    gap:100px;
+    margin-top: 15px;
+
+}
+.box-1 {
+    width: 350px;
+    height: 135px;
+}
+
+.box-2 {
+    
+    width: 350px;
+    height: 135px;
+
+   
+}
+.newproduct__logo {
+    width:70px;
+    height: 70px;
+    padding:41px 0px 41px 38px; 
+}
+.newproduct__text {
+    padding:20px 0 0 0;
+    margin-left: 10px;
+    font-family: Roboto;
+    font-size: 35px;
+    text-align: left;
+    
+}
+
+.graph__section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    
+    
+    
+}
+
+.datagraph__section {
+    
+    
+    width: 1200px;
+    height: 500px;
+    
+   
+  
+}
+
+.bargraph__section{
+    width: 1000px;
+    height: 450px;
+   
+}
+
+.country__text{
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+font: normal normal normal 25px/26px Roboto;
+color: #3E3E3E;
+}
+.pieIMG {
+    align-items: center;
+    justify-content: center;
+    padding-left: 275px;
+}
+
+}
