--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,34 +1,32 @@
 .navbar {
-    width: 1560px;
-    height: 80px;
+  width: 1560px;
+  height: 80px;
 }
 
 .menu__bar {
-    padding: 34px 0 34px 29px;
-    max-height: 16px;
+  padding: 34px 0 34px 29px;
+  max-height: 16px;
 }
 
 .logo {
-    margin-left: 25px;
-    padding:25px 0 25px 0;
-    max-height: 30px;
+  margin-left: 25px;
+  padding: 25px 0 25px 0;
+  max-height: 30px;
 }
 
-
 .serch__icon {
-    margin-left: 77px;
-    padding:32px 0 32px 0;
-    max-width: 16px;
-    max-height: 16px;
-    clear: right;
+  margin-left: 77px;
+  padding: 32px 0 32px 0;
+  max-width: 16px;
+  max-height: 16px;
+  clear: right;
 }
 
 .serch__text {
-     padding: 28px 0 30px 0px; 
-    left:326px;
-    top:20px;
-    position: absolute;
-   
+  padding: 28px 0 30px 0px;
+  left: 326px;
+  top: 20px;
+  position: absolute;
 }
 
 /* .serch__function {
@@ -39,30 +37,26 @@
 } */
 
 .notification__icon {
-    margin-left: 924px;
-    padding: 30px 0 30px 0;
+  margin-left: 924px;
+  padding: 30px 0 30px 0;
 }
 
-
-
-.profile__image{
-    padding:18px 0 18px 0;
-    margin-left: 53px;
+.profile__image {
+  padding: 18px 0 18px 0;
+  margin-left: 53px;
 }
 .johndoe__text {
-    position: absolute;
-    top: 24px;
-left: 1390px;
-padding: 28px 0 30px 0px; 
+  position: absolute;
+  top: 24px;
+  left: 1390px;
+  padding: 28px 0 30px 0px;
 }
 
 .downword__arrow {
-    position: absolute;
-    top:15px;
-    left:1460px;
-    padding: 37px 0 37px 0;
-
-
+  position: absolute;
+  top: 15px;
+  left: 1460px;
+  padding: 37px 0 37px 0;
 }
 
 /* .main__section {
@@ -70,335 +64,265 @@ padding: 28px 0 30px 0px;
     flex-direction: row;
 
 } */
-.dashboard__icon{
-    width: 15px;
-    height: 15px;
+.dashboard__icon {
+  width: 15px;
+  height: 15px;
 }
 
 aside {
-    width: 242px;
-height: 1279px;
-float: left;
-background: #FFFFFF 0% 0% no-repeat padding-box;
-display: flex;
-flex-direction: column;
+  width: 242px;
+  height: 1279px;
+  float: left;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  display: flex;
+  flex-direction: column;
 }
 
 .red__box {
-    width: 183px;
-height: 43px;
-margin-left: 30px;
-margin-top: 25px;
-     background: #FFF3F4 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    gap: 12px;
+  width: 183px;
+  height: 43px;
+  margin-left: 30px;
+  margin-top: 25px;
+  background: #fff3f4 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  gap: 12px;
 }
 
 .dashboard__icon {
-     padding:14px 0 14px 17px;
-    /* float: left;
-    clear: both; */ 
+  padding: 14px 0 14px 17px;
+  /* float: left;
+    clear: both; */
 }
 
 .dashboard__text {
-    font: normal normal normal 16px/21px Roboto;
-    color: #C8242F;
-     padding: 10px 0 12px 0;
-    
+  font: normal normal normal 16px/21px Roboto;
+  color: #c8242f;
+  padding: 10px 0 12px 0;
 }
 
-.box{
-   
-    border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    margin-left: 30px;
-margin-top: 30px;
-gap: 12px;
-
+.box {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  margin-left: 30px;
+  margin-top: 30px;
+  gap: 12px;
 }
 .aside__icon {
-    width: 18px;
-    height: 18px;
-    padding:0px 0 0px 17px;
-
-
+  width: 18px;
+  height: 18px;
+  padding: 0px 0 0px 17px;
 }
 
 .dashboard__section {
-    width: 1318px;
-    height: 1279px;
-    background: #fafafa 0% 0% no-repeat padding-box;
-    margin-top: 15px;
-    margin-left: 242px;
+  width: 1318px;
+  height: 1279px;
+  background: #fafafa 0% 0% no-repeat padding-box;
+  margin-top: 15px;
+  margin-left: 242px;
 }
 
 .rightside__dashboard__text {
- padding: 20px 0 0 48px;
- text-align: left;
- font-size: 39px;
- font-family: Roboto;
- font-weight: 500;
- 
+  padding: 20px 0 0 48px;
+  text-align: left;
+  font-size: 39px;
+  font-family: Roboto;
+  font-weight: 500;
 }
-/* 
-.active__boxes{
-    display:flex;
-    flex-direction:row;
-    justify-content:space-between;
-    
-
-}
-.box-1 {
-    width: 219px;
-    height: 116px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    margin-top: 22px;
-    margin-left: 48px;
-    margin-right: 30px;
-    display: flex;
-    float:left;
-    
-   
-}
-
-.newproduct__logo {
-    width: 33px;
-    height: 33px;
-    padding: 41px 0px 41px 38px;
-    
-}
-
-.newproduct__text {
-    padding:10px 0 0 0;
-    margin-left: 10px;
-    font-family: Roboto;
-    text-align: left;
-    font-size: 25px;
-    letter-spacing: 0;
-    
-}
-
-.box-2 {
-    width: 219px;
-    height: 116px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    top: 200px;
-    display: flex;
-    margin-left: 15px;
-    float: left;
-
-    
-
-} */
 
 .active__boxes {
-    margin-top: 30px;
-    display: flex;
-    border-radius: 5px;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    gap:15px;
+  margin-top: 30px;
+  display: flex;
+  border-radius: 5px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  gap: 15px;
 }
 
 .box-1 {
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    width: 229px;
-    height: 126px;
-    margin-left: 15px;
-   display: flex;
-   flex-direction: row;
-    float: left;
-    clear: right;
-
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  width: 229px;
+  height: 126px;
+  margin-left: 15px;
+  display: flex;
+  flex-direction: row;
+  float: left;
+  clear: right;
 }
 
 .box-2 {
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    width: 235px;
-    height: 126px;
-    display: flex;
-    flex-direction: row;
-
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  width: 235px;
+  height: 126px;
+  display: flex;
+  flex-direction: row;
 }
 
 .newproduct__logo {
-    width:33px;
-    height: 33px;
-    padding:41px 0px 41px 38px; 
+  width: 33px;
+  height: 33px;
+  padding: 41px 0px 41px 38px;
 }
 .newproduct__text {
-    padding:20px 0 0 0;
-    margin-left: 10px;
-    font-family: Roboto;
-    font-size: 23px;
-    text-align: left;
-    
+  padding: 20px 0 0 0;
+  margin-left: 10px;
+  font-family: Roboto;
+  font-size: 23px;
+  text-align: left;
 }
 .graph__section {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
 .timeseries {
-    margin-left:530px;
-    font: normal normal normal 12px/16px Roboto;
-    color: #ADADAD;
+  margin-left: 530px;
+  font: normal normal normal 12px/16px Roboto;
+  color: #adadad;
 }
 .datagraph__section {
-    
-    padding-top: 10px;
-    width: 802px;
-    height: 400px;
-    margin: 30px;
-    border-radius: 5px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    clear: right;
+  padding-top: 10px;
+  width: 802px;
+  height: 400px;
+  margin: 30px;
+  border-radius: 5px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  clear: right;
 }
 
-.sale__text{
-    text-align: left;
-    font-size: 25px;
-   padding: 23px 0px 0 29px ;
-    font-weight: 500;
-    font-family: Roboto;
-    margin-top: 20px;
-    margin-top: 15px;
+.sale__text {
+  text-align: left;
+  font-size: 25px;
+  padding: 23px 0px 0 29px;
+  font-weight: 500;
+  font-family: Roboto;
+  margin-top: 20px;
+  margin-top: 15px;
 }
 
-
-.data__graph{
-    padding-left: 29px;
+.data__graph {
+  padding-left: 29px;
 }
 
-.bargraph__section{
-    width: 385px;
-    height: 398px;
-    border-radius: 5px;
-    padding-top: 10px;
-    margin-top: 30px;;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
+.bargraph__section {
+  width: 385px;
+  height: 398px;
+  border-radius: 5px;
+  padding-top: 10px;
+  margin-top: 30px;
+  background: #ffffff 0% 0% no-repeat padding-box;
 }
 
 .salesbycountry__text {
-
-    text-align: left;
-    font-size: 25px;
-    padding: 21px 0px 0 29px ;
-    font-weight: 500;
-    font-family: Roboto;
-   
-    }
-.pie__chart {  
-    padding: 15px 0 0 89px;;
-
-    }
-
-.piechart__dotts {
-    width: 30px;
-    height: 30px;
+  text-align: left;
+  font-size: 25px;
+  padding: 21px 0px 0 29px;
+  font-weight: 500;
+  font-family: Roboto;
+}
+.pie__chart {
+  padding: 15px 0 0 89px;
 }
 
-.country__text{
-    text-align: left;
-font: normal normal normal 15px/20px Roboto;
-color: #3E3E3E;
+.piechart__dotts {
+  width: 30px;
+  height: 30px;
+}
+
+.country__text {
+  text-align: left;
+  font: normal normal normal 15px/20px Roboto;
+  color: #3e3e3e;
 }
 
 .orange__dot {
-    top: 674px;
-left: 1173px;
-width: 30px;
-height: 30px;
+  top: 674px;
+  left: 1173px;
+  width: 30px;
+  height: 30px;
 }
 
-.yellow__dot{
-    top: 674px;
-left: 1392px;
-width: 30px;
-height: 30px;
+.yellow__dot {
+  top: 674px;
+  left: 1392px;
+  width: 30px;
+  height: 30px;
 }
 
 .green__dot {
-    top: 636px;
-left: 1392px;
-margin-left:30px;
-width: 30px;
-height: 30px;
-
+  top: 636px;
+  left: 1392px;
+  margin-left: 30px;
+  width: 30px;
+  height: 30px;
 }
 
-.red__dot{
-    top: 636px;
-left: 1173px;
-width: 30px;
-height: 30px;
+.red__dot {
+  top: 636px;
+  left: 1173px;
+  width: 30px;
+  height: 30px;
 }
-
 
 .invoice__section {
-
-width: 1185px;
-height: 558px;
-margin-left: 30px;
-background: #FFFFFF 0% 0% no-repeat padding-box;
-border-radius: 5px;
-opacity: 1;
-padding: 20px 0 0 29px;;
+  width: 1185px;
+  height: 558px;
+  margin-left: 30px;
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border-radius: 5px;
+  opacity: 1;
+  padding: 20px 0 0 29px;
 }
 
 .Invoices__text {
-    text-align: left;
-    font-size: 25px;
-    padding: 21px 0px 0px 29px ;
-    font-weight: 500;
-    font-family: Roboto;
-   
-    
-
+  text-align: left;
+  font-size: 25px;
+  padding: 21px 0px 0px 29px;
+  font-weight: 500;
+  font-family: Roboto;
 }
 
-.viewall__text{
-    margin-left:1034px;
-    color: #C8242F;
+.viewall__text {
+  margin-left: 1034px;
+  color: #c8242f;
 }
 
 .invoice__table {
-    padding:10px;
+  padding: 10px;
 }
 
-
-
-.th{color: #ADADAD;}
-
-th,td{
-    padding: 13.15px;
-    text-align: left;
-    font: normal normal normal 15px/20px Roboto;
-    color: #3E3E3E;
+.th {
+  color: #adadad;
 }
 
- table,th,td{
-    border-bottom: solid 1px #E9E9E9;
-} 
+th,
+td {
+  padding: 13.15px;
+  text-align: left;
+  font: normal normal normal 15px/20px Roboto;
+  color: #3e3e3e;
+}
 
-#paid{
-    color: #3cdd5f;
+table,
+th,
+td {
+  border-bottom: solid 1px #e9e9e9;
 }
-#pending{
-    color: #bababa;
+
+#paid {
+  color: #3cdd5f;
 }
-#failed{
-    color: #ff4545;
+#pending {
+  color: #bababa;
+}
+#failed {
+  color: #ff4545;
 }
 /* #green__button {
     width:50px;
@@ -408,162 +332,213 @@ th,td{
     border: none;
 } */
 
+@media (min-width: 1441px) {
+  body {
+    margin-left: 500px;
+  }
+  .serch__text {
+    padding: 28px 0 30px 0px;
+    left: 820px;
+    top: 20px;
+    position: absolute;
+  }
+  .downword__arrow {
+    position: absolute;
+    top: 15px;
+    left: 1948px;
+    padding: 37px 0 37px 0;
+  }
+  .johndoe__text {
+    position: absolute;
+    top: 24px;
+    left: 1877px;
+    padding: 28px 0 30px 0px;
+  }
+}
 
-@media(max-width:479px){
-    .johndoe__text {
-        display: none;
-    } 
-    .navbar {
-        height: 100px;
-    }
-   /* aside {
+@media (max-width: 479px) {
+  .johndoe__text {
+    display: none;
+  }
+  .navbar {
+    height: 100px;
+  }
+  /* aside {
     display: none;
     } */
-    .downword__arrow{
-        left:1480px;
-    }
-   .menu__bar{
-       padding: 34px 0 34px 29px;
-       width: 35px;
-       height: 35px;
-       
-      
-   }
-   .serch__text{
-       display: none;
-   }
-   .logo {
-    padding:15px 0 15px 0;
+  .downword__arrow {
+    left: 1480px;
+  }
+  .menu__bar {
+    padding: 34px 0 34px 29px;
+    width: 35px;
+    height: 35px;
+  }
+  .serch__text {
+    display: none;
+  }
+  .logo {
+    padding: 15px 0 15px 0;
     max-height: 40px;
-}
+  }
 
-.serch__icon {
-    
-    padding:10px 0 10px 0;
+  .serch__icon {
+    padding: 10px 0 10px 0;
     max-width: 30px;
     max-height: 30px;
- 
-}
+  }
 
-.profile__image{
+  .profile__image {
     width: 55px;
     height: 55px;
-}
+  }
 
+  .dashboard__text {
+    display: none;
+  }
+  .Analysis__text {
+    display: none;
+  }
 
-.dashboard__text{
+  .inbox__text {
     display: none;
-}
-.Analysis__text{
+  }
+  .clock__text {
     display: none;
-}
-
-.inbox__text {
+  }
+  .users__text {
     display: none;
-}
-.clock__text {
+  }
+  .maintenance__text {
     display: none;
-}
-.users__text{
+  }
+  .setting__text {
     display: none;
-}
-.maintenance__text {
-    display: none;
-}
-.setting__text{
-    display: none;
-}
-.red__box {
+  }
+  .red__box {
     width: 60px;
-}
+  }
 
-aside {
+  aside {
     width: 100px;
-}
-.dashboard__section {
-   
+  }
+  .dashboard__section {
     margin-left: 105px;
-    
 
     width: 1318px;
     height: 2200px;
     background: #fafafa 0% 0% no-repeat padding-box;
     margin-top: 15px;
-   
-
-
-}
-.active__boxes{
+  }
+  .dashboard__icon {
+    width: 40px;
+    height: 40px;
+  }
+  .aside__icon {
+    width: 40px;
+    height: 40px;
+  }
+  .active__boxes {
     flex-wrap: wrap;
     justify-content: center;
-    gap:100px;
+    gap: 100px;
     margin-top: 15px;
-
-}
-.box-1 {
-    width: 350px;
+  }
+  .box-1 {
+    width: 300px;
     height: 135px;
-}
+  }
 
-.box-2 {
-    
-    width: 350px;
+  .box-2 {
+    width: 300px;
     height: 135px;
-
-   
-}
-.newproduct__logo {
-    width:70px;
+  }
+  .box-3 {
+    margin-top: -50px;
+    width: 300px;
+    height: 135px;
+  }
+  .newproduct__logo {
+    width: 70px;
     height: 70px;
-    padding:41px 0px 41px 38px; 
-}
-.newproduct__text {
-    padding:20px 0 0 0;
+    padding: 41px 0px 41px 38px;
+  }
+  .newproduct__text {
+    padding: 20px 0 0 0;
     margin-left: 10px;
     font-family: Roboto;
     font-size: 35px;
     text-align: left;
-    
-}
+  }
 
-.graph__section {
+  .graph__section {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
-    
-    
-    
-}
+    margin-top: 30px;
+  }
+  .data__graph {
+    padding-left: 90px;
+  }
 
-.datagraph__section {
-    
-    
+  .datagraph__section {
     width: 1200px;
     height: 500px;
-    
-   
-  
-}
+  }
+  .sale__text {
+    font-size: 40px;
+    padding-left: 100px;
+  }
 
-.bargraph__section{
+  .timeseries {
+    margin-left: 530px;
+    font: normal normal normal 30px/25px Roboto;
+    color: #adadad;
+  }
+
+  .bargraph__section {
     width: 1000px;
     height: 450px;
-   
-}
+  }
 
-.country__text{
+  .country__text {
     text-align: left;
     align-items: center;
     justify-content: center;
-font: normal normal normal 25px/26px Roboto;
-color: #3E3E3E;
-}
-.pieIMG {
+    font: normal normal normal 25px/26px Roboto;
+    color: #3e3e3e;
+  }
+  .pieIMG {
     align-items: center;
     justify-content: center;
     padding-left: 275px;
-}
+  }
 
+  .salesbycountry__text {
+    font-size: 45px;
+    letter-spacing: 1px;
+  }
+  .data__graph {
+    padding-left: 150px;
+    padding-bottom: 10px;
+  }
+
+  .Invoices__text {
+    font-size: 40px;
+    letter-spacing: 1px;
+  }
+  th,
+  td {
+    padding: 10px;
+    text-align: left;
+    font: normal normal normal 20px/25px Roboto;
+    color: #3e3e3e;
+  }
+  .viewall__text {
+    margin-left: 1034px;
+    color: #c8242f;
+    font-size: 26px;
+  }
 }
